--- a/questions.yaml
+++ b/questions.yaml
@@ -67,7 +67,8 @@ questions:
 - title: What does the following code do?
   type: single_choice
   body: |
-    ~~~python
+
+    ~~~python3
     from django.db import models
 
     class OfficeBuildingsManager(models.Manager):
